--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,5 @@
 version: '2'
 services:
-  app:
-    build: ./service
-    restart: always
-    depends_on:
-      - db
-    ports:
-      - 9000:9090
   db:
     build: ./db
     restart: always
@@ -15,6 +8,7 @@ services:
       - POSTGRES_PASSWORD=12345
       - POSTGRES_DB=devcamp
     ports:
-      - 9001:5432
+      - 5433:5433
     volumes:
       - ./db/db-data:/var/lib/postgresql/data
+    command: -p 5433
